9.3.0 -
Support for .NET 5
Improvements to LanguageManager's lazy loading of resources.
Deprecate IStringSource and its implementors. Use delegates instead.
CustomizeValidatorAttribute now works in Razor pages (netcore 3.1 and net 5.0 only) (#1541)

9.2.2 - 20 September 2020
Fix one of the inheritance validator overloads not working correctly (#1528)

9.2.1 - 19 September 2020
Add non-generic Add method to inheritance validator.
Updates to Persian translations (#1513)
Added Bengali translations (#1517)

9.2.0 - 26 August 2020
Add inheritance validator (#1237)
Performance improvements.

9.1.3 - 19 August 2020
Fix an issue with IncludeRulesNotInRuleSet not working correctly (#1493)

9.1.2 - 12 August 2020
Make the ValidationContext.ThrowOnFailures getter public.

9.1.1 - 8 August 2020
Update StopOnFirstFailure deprecation message.

9.1 - 8 August 2020
Make ruleset separator character splitting consistent (#1424)
Transform now works with RuleForEach (#1450)
Introduce constants for rulesets (#1435)
Resolve issue when attempting to use asynchronous conditions in a synchornous validaiton run (#1438)
Added asynchronous versions of the TestHelper methods (#1423)
Introduce CascadeMode.Stop and deprecate CascadeMode.StopOnFirstFailure to resolve confusion/abiguity about setting the cascade mode at validator-level (#1437)
RaiseValidationException can be overridden to customize the exception throwing process (#1162)
Add new Validate extension methods that allow options to be configured using a strategy (#1467)

9.0.1 - 14 July 2020
Fix assembly version was still 8.

9.0 - 6 July 2020
Removed support for netstandard1.1, netstandard1.6 and net45 (net461 still supported)
Removed support for unsupported .NET Core versions (2.2 and 3.0). LTS versions are supported (2.1 and 3.1)
Default email validation mode now uses the same logic as ASP.NET Core. Previous regex behaviour is opt-in.