@@ -19,11 +19,19 @@
 #endregion
 
 namespace FluentValidation.AspNetCore {
-	using Microsoft.AspNetCore.Mvc.ModelBinding;
+	using FluentValidation.Internal;
 	using FluentValidation.Results;
+	using Microsoft.AspNetCore.Http;
 	using Microsoft.AspNetCore.Mvc;
+	using Microsoft.AspNetCore.Mvc.ModelBinding;
+#if NETCOREAPP3_1 || NET5_0
+	using Microsoft.AspNetCore.Mvc.RazorPages;
+#endif
 
 	public static class ValidationResultExtension {
+
+		private const string _rulesetKey = "_FV_ClientSideRuleSet";
+
 		/// <summary>
 		/// Stores the errors in a ValidationResult object to the specified modelstate dictionary.
 		/// </summary>
@@ -48,8 +56,38 @@ namespace FluentValidation.AspNetCore {
 		/// </summary>
 		/// <param name="context">Http context</param>
 		/// <param name="ruleSets">Array of ruleset names</param>
-		public static void SetRulesetForClientsideMessages(this ControllerContext context, params string[] ruleSets) {
-			context.HttpContext.Items["_FV_ClientSideRuleSet"] = ruleSets;
+		public static void SetRulesetForClientsideMessages(this HttpContext context, params string[] ruleSets) => context.Items[_rulesetKey] = ruleSets;
+
+		/// <summary>
+		/// Gets the rulesets used to generate clientside validation metadata.
+		/// </summary>
+		/// <param name="context">Http context</param>
+		/// <returns>Array of ruleset names</returns>
+		public static string[] GetRuleSetsForClientValidation(this HttpContext context) {
+			// If the httpContext is null (for example, if IHttpContextProvider hasn't been registered) then just assume default ruleset.
+			// This is OK because if we're actually using the attribute, the OnActionExecuting will have caught the fact that the provider is not registered. 
+
+			if (context?.Items != null && context.Items.ContainsKey(_rulesetKey) && context?.Items[_rulesetKey] is string[] ruleSets) {
+				return ruleSets;
+			}
+
+			return new[] { RulesetValidatorSelector.DefaultRuleSetName };
 		}
+
+		/// <summary>
+		/// Sets the rulests used when generating clientside messages.
+		/// </summary>
+		/// <param name="context">Controller context</param>
+		/// <param name="ruleSets">Array of ruleset names</param>
+		public static void SetRulesetForClientsideMessages(this ControllerContext context, params string[] ruleSets) => context.HttpContext.SetRulesetForClientsideMessages(ruleSets);
+
+#if NETCOREAPP3_1 || NET5_0
+		/// <summary>
+		/// Sets the rulests used when generating clientside messages.
+		/// </summary>
+		/// <param name="context">Page context</param>
+		/// <param name="ruleSets">Array of ruleset names</param>
+		public static void SetRulesetForClientsideMessages(this PageContext context, params string[] ruleSets) => context.HttpContext.SetRulesetForClientsideMessages(ruleSets);
+#endif
 	}
 }
