@@ -212,4 +212,76 @@ namespace FluentValidation.Tests.AspNetCore {
 			ClientsideModelValidator.TimesInstantiated.ShouldEqual(1);
 		}
 	}
+
+
+	public class RazorPagesClientsideMessageTester : IClassFixture<WebAppFixture> {
+		private readonly HttpClient _client;
+
+		public RazorPagesClientsideMessageTester(WebAppFixture webApp) {
+			_client = webApp.WithContainer(enableLocalization: true).CreateClient();
+			CultureScope.SetDefaultCulture();
+		}
+
+		[Fact]
+		public async Task Should_only_use_rules_from_default_ruleset() {
+			var msg = await _client.RunRulesetAction("/Rulesets/DefaultRuleSet", "Test");
+			msg.Length.ShouldEqual(1);
+			msg[0].ShouldEqual("third");
+		}
+
+		[Fact]
+		public async Task Should_use_rules_from_specified_ruleset() {
+			var msg = await _client.RunRulesetAction("/Rulesets/SpecifiedRuleSet", "Test");
+			msg.Length.ShouldEqual(1);
+			msg[0].ShouldEqual("first");
+		}
+
+		[Fact]
+		public async Task Should_use_rules_from_multiple_rulesets() {
+			var msgs = await _client.RunRulesetAction("/Rulesets/MultipleRuleSets", "Test");
+			msgs.Length.ShouldEqual(2);
+			msgs[0].ShouldEqual("first");
+			msgs[1].ShouldEqual("second");
+		}
+
+		[Fact]
+		public async Task Should_use_rules_from_default_ruleset_and_specified_ruleset() {
+			var msgs = await _client.RunRulesetAction("/Rulesets/DefaultAndSpecifiedRuleSet", "Test");
+			msgs.Length.ShouldEqual(2);
+			msgs[0].ShouldEqual("first");
+			msgs[1].ShouldEqual("third");
+		}
+
+#if NETCOREAPP3_1 || NET5_0
+		[Fact]
+		public async Task Should_only_use_rules_from_default_ruleset_extension() {
+			var msg = await _client.RunRulesetAction("/Rulesets/RuleSetForHandlers?handler=default", "Test");
+			msg.Length.ShouldEqual(1);
+			msg[0].ShouldEqual("third");
+		}
+
+		[Fact]
+		public async Task Should_use_rules_from_specified_ruleset_extension() {
+			var msg = await _client.RunRulesetAction("/Rulesets/RuleSetForHandlers?handler=specified", "Test");
+			msg.Length.ShouldEqual(1);
+			msg[0].ShouldEqual("first");
+		}
+
+		[Fact]
+		public async Task Should_use_rules_from_multiple_rulesets_extension() {
+			var msgs = await _client.RunRulesetAction("/Rulesets/RuleSetForHandlers?handler=multiple", "Test");
+			msgs.Length.ShouldEqual(2);
+			msgs[0].ShouldEqual("first");
+			msgs[1].ShouldEqual("second");
+		}
+
+		[Fact]
+		public async Task Should_use_rules_from_default_ruleset_and_specified_ruleset_extension() {
+			var msgs = await _client.RunRulesetAction("/Rulesets/RuleSetForHandlers?handler=defaultAndSpecified", "Test");
+			msgs.Length.ShouldEqual(2);
+			msgs[0].ShouldEqual("first");
+			msgs[1].ShouldEqual("third");
+		}
+#endif
+	}
 }
