@@ -1,0 +1,8 @@
+@page
+@model FluentValidation.Tests.TestPageModelWithDefaultAndSpecifiedRuleSet
+
+<div>
+  <input asp-for="Test.CustomName1" />
+  <input asp-for="Test.CustomName2" />
+  <input asp-for="Test.CustomName3" />
+</div>
