@@ -1,0 +1,3 @@
+@using FluentValidation.Tests
+@namespace FluentValidation.Tests.Pages
+@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
