@@ -22,7 +22,7 @@ namespace FluentValidation.Tests {
 
 			foreach (var pair in ModelState) {
 				foreach (var error in pair.Value.Errors) {
-					errors.Add(new SimpleError {Name = pair.Key, Message = error.ErrorMessage});
+					errors.Add(new SimpleError { Name = pair.Key, Message = error.ErrorMessage });
 				}
 			}
 
@@ -46,7 +46,7 @@ namespace FluentValidation.Tests {
 
 			foreach (var pair in ModelState) {
 				foreach (var error in pair.Value.Errors) {
-					errors.Add(new SimpleError {Name = pair.Key, Message = error.ErrorMessage});
+					errors.Add(new SimpleError { Name = pair.Key, Message = error.ErrorMessage });
 				}
 			}
 
@@ -57,7 +57,7 @@ namespace FluentValidation.Tests {
 	[IgnoreAntiforgeryToken(Order = 1001)]
 	public class TestPageModelWithPrefix : PageModel {
 
-		[BindProperty(Name="Test")]
+		[BindProperty(Name = "Test")]
 		public TestModel Test { get; set; }
 
 		public Task<IActionResult> OnPostAsync() {
@@ -69,7 +69,7 @@ namespace FluentValidation.Tests {
 
 			foreach (var pair in ModelState) {
 				foreach (var error in pair.Value.Errors) {
-					errors.Add(new SimpleError {Name = pair.Key, Message = error.ErrorMessage});
+					errors.Add(new SimpleError { Name = pair.Key, Message = error.ErrorMessage });
 				}
 			}
 
@@ -77,5 +77,68 @@ namespace FluentValidation.Tests {
 		}
 	}
 
+	[IgnoreAntiforgeryToken(Order = 1001)]
+	public class TestPageModelWithDefaultRuleSet : PageModel {
 
+		[BindProperty(Name = "Test")]
+		public ClientsideRulesetModel Test { get; set; }
+
+		public IActionResult OnGet() => Page();
+	}
+
+	[IgnoreAntiforgeryToken(Order = 1001)]
+	[RuleSetForClientSideMessages("Foo")]
+	public class TestPageModelWithSpecifiedRuleSet : PageModel {
+
+		[BindProperty(Name = "Test")]
+		public ClientsideRulesetModel Test { get; set; }
+
+		public IActionResult OnGet() => Page();
+	}
+
+	[IgnoreAntiforgeryToken(Order = 1001)]
+	[RuleSetForClientSideMessages("Foo", "Bar")]
+	public class TestPageModelWithMultipleRuleSets : PageModel {
+
+		[BindProperty(Name = "Test")]
+		public ClientsideRulesetModel Test { get; set; }
+
+		public IActionResult OnGet() => Page();
+	}
+
+	[IgnoreAntiforgeryToken(Order = 1001)]
+	[RuleSetForClientSideMessages("Foo", "default")]
+	public class TestPageModelWithDefaultAndSpecifiedRuleSet : PageModel {
+
+		[BindProperty(Name = "Test")]
+		public ClientsideRulesetModel Test { get; set; }
+
+		public IActionResult OnGet() => Page();
+	}
+
+	[IgnoreAntiforgeryToken(Order = 1001)]
+	public class TestPageModelWithRuleSetForHandlers : PageModel {
+
+		[BindProperty(Name = "Test")]
+		public ClientsideRulesetModel Test { get; set; }
+
+		public IActionResult OnGetDefault() => Page();
+
+#if NETCOREAPP3_1 || NET5_0
+		public IActionResult OnGetSpecified() {
+			PageContext.SetRulesetForClientsideMessages("Foo");
+			return Page();
+		}
+
+		public IActionResult OnGetMultiple() {
+			PageContext.SetRulesetForClientsideMessages("Foo", "Bar");
+			return Page();
+		}
+
+		public IActionResult OnGetDefaultAndSpecified() {
+			PageContext.SetRulesetForClientsideMessages("Foo", "default");
+			return Page();
+		}
+#endif
+	}
 }
