@@ -9,6 +9,7 @@ Changes in 9.3.0:
 * Improvements to LanguageManager's lazy loading of resources.
 * Deprecate IStringSource and its implementors. Use delegates instead.
 * CustomizeValidatorAttribute now works in Razor pages (netcore 3.1 and net 5.0 only)
+* RuleSetForClientSideMessagesAttribute now works in Razor pages (netcore 3.1 and net 5.0 only)
 
 Changes in 9.2.2:
 * Fix one of the inheritance validator overloads not working correctly.
